# itmo-chart-backend

./: .env  Dockerfile  app.py  docker-compose.yml  pyproject.toml
docs/: README.md
modules/: database.py  exceptions.py  models.py  security.py  utils.py
modules/routers/: __init__.py
modules/routers/presentator/: models.py  router.py
modules/routers/service/: dependencies.py  models.py  router.py
modules/routers/user/: models.py  router.py
routers/: __init__.py
routers/presentator/: router.py
routers/service/: models.py  router.py
routers/user/: models.py  router.py
